--- a/chord/src/components/MemoModal.css
+++ b/chord/src/components/MemoModal.css
@@ -2,10 +2,10 @@
 	display: none;
 	z-index: 99;
 	position: absolute;
-	width: 748px;
-	height: 541px;
-	left: 691px;
-	top: 219px;
+	width: 690px;
+	height: 520px;
+	left: 660px;
+	top: 160px;
 	background: #ffffff;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 15px;
@@ -13,15 +13,13 @@
 .modal-button {
 	cursor: pointer;
 	border: 0;
-	margin-left: 300px;
 }
 .close {
 	background-color: #fff;
+	width: 30px;
 	cursor: pointer;
 }
 .modal > section {
-	width: 90%;
-	max-width: 748px;
 	margin: 0 auto;
 	border-radius: 0.3rem;
 	background-color: #fff;
@@ -30,37 +28,75 @@
 }
 .modal > section > header {
 	position: relative;
-	padding: 16px 64px 16px 16px;
+	margin-top: 10px;
 	font-weight: 700;
 }
 .modal > section > header button {
 	position: absolute;
-	top: 15px;
-	right: 15px;
+	top: -2px;
+	right: 10px;
 	width: 30px;
-	font-size: 21px;
+	font-size: 50px;
 	font-weight: 700;
 	text-align: center;
 	border: none;
 }
 .modal > section > main {
-	padding: 16px;
+	padding-top: 5px;
 }
-.name {
+.title {
 	width: 287px;
 	height: 42px;
 	border-style: none;
 	background-color: #f4f0e8;
+	padding-left: 5px;
+	padding-top: 5px;
+	font-weight: 600;
+	font-size: 25px;
+	font-family: "Poppins";
+}
+.singer {
+	width: 287px;
+	height: 42px;
+	border-style: none;
+	background-color: #f4f0e8;
+	padding-left: 5px;
+	font-weight: 500;
+	font-size: 20px;
+	font-family: "Poppins";
 }
 .input-content {
-	margin-top: 30px;
-	width: 640px;
+	margin-top: 20px;
+	width: 618px;
 	height: 200px;
 	left: 715px;
 	top: 405px;
+	border-style: none;
 	background: #f4f0e8;
 	opacity: 0.5;
-	font-size: 16px;
+	padding-left: 5px;
+	font-weight: 400;
+	font-size: 30px;
+	font-family: "Poppins";
+}
+.title::placeholder {
+	padding-left: 5px;
+	padding-top: 10px;
+	font-weight: 600;
+	font-size: 25px;
+	font-family: "Poppins";
+}
+.singer::placeholder {
+	padding-left: 5px;
+	font-weight: 500;
+	font-size: 20px;
+	font-family: "Poppins";
+}
+textarea::placeholder {
+	padding-left: 5px;
+	font-weight: 400;
+	font-size: 30px;
+	font-family: "Poppins";
 }
 .modal > section > footer {
 	padding: 12px 16px;
